--- a/src/cpp/CMakeLists.txt
+++ b/src/cpp/CMakeLists.txt
@@ -7,7 +7,7 @@ FIND_PACKAGE(OpenMP)
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 ${OpenMP_CXX_FLAGS} -Wall")
 
 # Change this line if your Torch7 is installed elsewhere
-SET(TORCH_ROOT "$ENV{HOME}/torch/install")
+SET(TORCH_ROOT "~/torch/install")
 
 # Dependencies
 SET(SEARCH_PATHS "${TORCH_ROOT}/lib")
@@ -19,7 +19,7 @@ FIND_LIBRARY(TH_LIBRARY TH
   PATHS ${SEARCH_PATHS})
 FIND_LIBRARY(THC_LIBRARY THC
   PATHS ${SEARCH_PATHS})
-SET(EXT_LIBRARIES ${THPP_LIBRARY} ${LUAT_LIBRARY} ${TH_LIBRARY} ${THC_LIBRARY})
+SET(EXT_LIBRARIES ${THC_LIBRARY} ${THPP_LIBRARY} ${LUAT_LIBRARY} ${TH_LIBRARY})
 SET(EXT_INCLUDE_DIRS "${TORCH_ROOT}/include" "${TORCH_ROOT}/include/TH")
 
 # Target
